// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer > should write a cache file to a different path 1`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"../src/index.ts\\": \\"3994602698153364047\\"
    }
  }
}"
`;

exports[`betterer > should write a cache file to a different path 2`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"../src/index.ts\\": \\"3994602698153364047\\"
    }
  }
}"
`;

exports[`betterer > should write a cache file to a different path 3`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/index.ts:153364047\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"],
      [1, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};
"
`;

exports[`betterer > should write a cache file to a different path 4`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {
    \\"test\\": {
      \\"../src/index.ts\\": \\"39946026984126639614\\"
    }
  }
}"
`;

exports[`betterer > should write a cache file to a different path 5`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/index.ts:4126639614\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645651780\\"]
    ]
  }\`
};
"
`;

exports[`betterer > should write a cache file to a different path 6`] = `
"{
  \\"version\\": 2,
  \\"testCache\\": {}
}"
`;

exports[`betterer > should write a cache file to a different path 7`] = `
[
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (10ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (10ms): 1 test running...
✅ test: \\"test\\" got checked for the first time! (2 issues) 🎉
",
  "🎉 Betterer (39ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (2 issues) 🎉
",
  "🎉 Betterer (39ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (2 issues) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (19ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (19ms): 1 test running...
✅ test: \\"test\\" stayed the same. (2 issues) 😐
",
  "🎉 Betterer (22ms): 1 test done!
✅ test: \\"test\\" stayed the same. (2 issues) 😐
",
  "🎉 Betterer (22ms): 1 test done!
✅ test: \\"test\\" stayed the same. (2 issues) 😐

1 test got checked. 🤔
1 test stayed the same. 😐
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (12ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (12ms): 1 test running...
🔥 test: \\"test\\" got worse. (1 new issue, 3 total) 😔
",
  "🌟 Betterer (12ms): 1 test running...
🔥 test: \\"test\\" got worse. (1 new issue, 3 total) 😔

Error: \\"test\\" got worse. (1 new issue, 3 total) 😔
",
  "💥 Betterer (37ms): 1 test done! 1 test errored!
🔥 test: \\"test\\" got worse. (1 new issue, 3 total) 😔
・ 2 existing issues in \\"<project>/fixtures/cache-path/src/index.ts\\".
・ New issue in \\"<project>/fixtures/cache-path/src/index.ts\\"!
・
・   <project>/fixtures/cache-path/src/index.ts
・   1 | // HACK:
・   2 | // HACK:
・ > 3 | // HACK:
・     | ^^^^^^^ RegExp match
・

Error: \\"test\\" got worse. (1 new issue, 3 total) 😔
",
  "💥 Betterer (37ms): 1 test done! 1 test errored!
🔥 test: \\"test\\" got worse. (1 new issue, 3 total) 😔
・ 2 existing issues in \\"<project>/fixtures/cache-path/src/index.ts\\".
・ New issue in \\"<project>/fixtures/cache-path/src/index.ts\\"!
・
・   <project>/fixtures/cache-path/src/index.ts
・   1 | // HACK:
・   2 | // HACK:
・ > 3 | // HACK:
・     | ^^^^^^^ RegExp match
・

Error: \\"test\\" got worse. (1 new issue, 3 total) 😔

1 test got checked. 🤔
1 test got worse. 😔

You should try to fix the new issues! As a last resort, you can run \`betterer --update\` to force an update of the results file. 🆙
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (9ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (9ms): 1 test running...
✅ test: \\"test\\" got better! (1 fixed issue, 1 remaining) 😍
",
  "🎉 Betterer (20ms): 1 test done!
✅ test: \\"test\\" got better! (1 fixed issue, 1 remaining) 😍
",
  "🎉 Betterer (20ms): 1 test done!
✅ test: \\"test\\" got better! (1 fixed issue, 1 remaining) 😍

1 test got checked. 🤔
1 test got better! 😍
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (8ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8ms): 1 test running...
✅ test: \\"test\\" met its goal! 🎉
",
  "🎉 Betterer (18ms): 1 test done!
✅ test: \\"test\\" met its goal! 🎉
",
  "🎉 Betterer (18ms): 1 test done!
✅ test: \\"test\\" met its goal! 🎉

1 test got checked. 🤔
1 test got better! 😍
1 test met its goal! 🎉
",
]
`;
